<resources>
    <string name="app_name">Event Planner</string>
    <string name="home_page">Home Page</string>
    <string name="search_hint">Search</string>
    <string name="search_products">Search products</string>
    <string name="search_services">Search services</string>
    <string name="description_filtration">Filtrate description</string>
    <string name="min_price">min</string>
    <string name="max_price">max</string>
    <string name="select_event_type">Select an event type:</string>
    <string name="create_event">Create event</string>
    <string name="name_event">Name event:</string>
    <string name="description_event">Description event:</string>
    <string name="maxpeople_event">Maximum number of people:</string>
    <string name="privacy_event">Privacy rules of the event:</string>
    <string name="opentype_event">Open type</string>
    <string name="closedtype_event">Closed type</string>
    <string name="place_event">Place event:</string>
    <string name="distance_event">Maximal distance in km:</string>
    <string name="datepicker_event">Pick a date:</string>
    <string name="proposal_typeevent">Suggestions for product and service subcategories:</string>
    <string name="categoryy">Category:</string>
    <string name="namee">Name:</string>
    <string name="descriptionn">Description:</string>
    <string name="type">Type:</string>
    <string name="products">Products</string>
    <string name="services">Services</string>
    <string name="packages">Packages</string>
    <string name="filters">Filters</string>
    <string name="sort">Sort</string>
    <string name="searchbyname_hint">Search by name</string>
    <string name="searchbylocation_hint">Search by location</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="searchbunamepup_hint">Search by name PUP</string>
    <string name="datepickerrange">Date picker range</string>
    <string name="subcategory">Subcategory</string>
    <string name="rangeprice">Price range:</string>
    <string name="menuitem1">Products, services and packages</string>
    <string name="navigation_drawer_open" translatable="false">Navigation Drawer Open</string>
    <string name="navigation_drawer_close" translatable="false">Navigation Drawer Close</string>
    <string name="doo">do</string>
    <string name="events">Events</string>
    <string name="create_product">Create product</string>
    <string name="categories">Categories</string>
    <string name="subcategories">Subcategories</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="dollar">$</string>
    <string name="percent">%</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="available">Available</string>
    <string name="visible">Visible</string>
    <string name="edit_product">Edit product</string>
    <string name="category">Category</string>
    <string name="delete">Delete</string>
    <string name="providers">Providers</string>
    <string name="create_service">Create service</string>
    <string name="specific">Specific</string>
    <string name="pricePerHour">Price per hour</string>
    <string name="duration">Duration</string>
    <string name="h">h</string>
    <string name="location">Location</string>
    <string name="reservation_due">Reservation due</string>
    <string name="cancelation_due">Cancelation due</string>
    <string name="automatic_affirmation">Automatic affirmation</string>
    <string name="edit_service">Edit service</string>
    <string name="duration_min">Duration min</string>
    <string name="duration_max">Duration max</string>
    <string name="create_package">Create package</string>
    <string name="edit_package">Edit package</string>
    <string name="register">Register</string>
    <string name="add_image_optional">Add Image (optional)</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="event_organizer_registration">Event organizer registration</string>
    <string name="edit">Edit</string>
    <string name="kmm">km</string>
    <string name="yourevents">Your events:</string>
    <string name="budgetplanner">Budget planner</string>
    <string name="search_for_od">Search for OD</string>
    <string name="search_by_your_event">Search by your event:</string>
    <string name="rbb">RB</string>
    <string name="subcategory_productservice">Subcategory product/service</string>
    <string name="amount">Amount</string>
    <string name="planned">Planned</string>
    <string name="spent">Spent</string>
    <string name="name_product_service">Name product/service</string>
    <string name="link_to_details_product">Link to product/service</string>
    <string name="add">Add</string>
    <string name="total_planned">Total planned:</string>
    <string name="total_spent">Total spent:</string>
    <string name="select_category">Select category:</string>
    <string name="select_subcategory">Select subcategory:</string>
    <string name="enter_the_price">Enter the expected price for the selected category and subcategory:</string>
    <string name="enter_price">Enter the price:</string>
    <string name="agenda_events">Event agenda</string>
    <string name="create_agenda_activity">Create activity</string>
    <string name="create_agenda_activity_title">Create an activity for your event that will be included in the agenda for your event:</string>
    <string name="duration_activity">Duration activity:</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="dash">-</string>
    <string name="guest_list">Guest list:</string>
    <string name="add_guest">Add guest</string>
    <string name="fullname">Full name</string>
    <string name="age_guest">Age guest</string>
    <string name="toddler">0-3</string>
    <string name="child">3-10</string>
    <string name="teenager">10-18</string>
    <string name="young_adult">18-30</string>
    <string name="adult">30-50</string>
    <string name="middle_aged_adult">50-70</string>
    <string name="elderly">70+</string>
    <string name="isInvited">Is the guest invited?</string>
    <string name="hasAccepted">Has the guest accepted the invitation?</string>
    <string name="specialGuest">Special reust for guest</string>
    <string name="invited">Invited</string>
    <string name="accpted">Accepted</string>
    <string name="generate_pdf">Generate PDF</string>
    <string name="my_profile">My profile</string>
    <string name="change_iamge_profile">Edit image profile</string>
    <string name="change_password">Change password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="company_info">Company Info</string>
    <string name="company_name">Company name</string>
    <string name="company_description">Company description</string>
    <string name="company_address">Company address</string>
    <string name="company_email">Company email</string>
    <string name="company_phone">Company phone</string>
    <string name="work_time">Work time</string>
    <string name="edit_company">Edit company</string>
    <string name="pricelist">Pricelist</string>
    <string name="report">Report</string>
    <string name="reason_of_report">Reason of report</string>
    <string name="send">Send</string>
    <string name="user_info">User info</string>
    <string name="reported">Reported:</string>
    <string name="reporter">Reporter:</string>
    <string name="user_reports">User reports</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_types_for_product">This product is intended for the following types of events:</string>
    <string name="event_types_for_service">This service is intended for the following types of events:</string>
    <string name="event_types_for_package">This package is intended for the following types of events:</string>
    <string name="category_name">Category name:</string>
    <string name="subcategory_name">Subcategory name:</string>
    <string name="regular_price">Regular price:</string>
    <string name="discountt">Discount:</string>
    <string name="price_with_discount">Price with discount:</string>
    <string name="description_of_product">Description of product:</string>
    <string name="description_of_service">Description of service:</string>
    <string name="description_of_package">Description of package:</string>
    <string name="service">Service</string>
    <string name="product">Product</string>
    <string name="packagee">Package</string>
    <string name="deadline_for_reservation">Deadline for reservation:</string>
    <string name="cancellation_deadline">Cancellation deadline:</string>
    <string name="subcategory_names">Subcategory names:</string>
    <string name="buy_the_product">Buy the product</string>
    <string name="book_a_service">Book a service</string>
    <string name="book_a_package">Book a package</string>
    <string name="show_company_info">Show company info</string>
    <string name="sent_message_pupv">Send message to PUPV</string>
    <string name="chats">Chats</string>
    <string name="message">Message</string>
    <string name="notifications">Notifications</string>
    <string name="send_message">Send message</string>
    <string name="pupz_employess">These are employees who provide services:</string>
    <string name="like">Like</string>
    <string name="unlike">Unlike</string>
    <string name="favourites_psp">Favourites psp</string>
</resources>