<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_product_and_services"
            android:title="@string/menuitem1"
            android:orderInCategory="100"
            android:visible="true"/>

        <item android:id="@+id/nav_events"
            android:title="@string/events"
            android:orderInCategory="200"
            android:visible="false"/>

        <item android:id="@+id/my_profile"
            android:title="@string/my_profile"
            android:orderInCategory="200"
            android:visible="false"/>

        <item android:id="@+id/chats"
            android:title="@string/chats"
            android:orderInCategory="200"
            android:visible="false"/>

        <item android:id="@+id/favouritespsp"
            android:title="@string/favourites_psp"
            android:orderInCategory="200"
            android:visible="false"/>


    </group>
</menu>