<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.AddSubcategoryOnBudgetPlannerFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_guest"
            android:textSize="25sp"
            android:textColor="@color/purple_light"
            android:layout_margin="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/fullname"
            android:textColorHint="@color/purple_light"
            app:hintTextColor="@color/purple_light"
            app:boxStrokeColor="@color/purple_light"
            app:boxStrokeWidth="2dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fullNameGuest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_light"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_guest"
            android:textSize="15sp"
            android:textColor="@color/purple_light"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioGroup
                android:id="@+id/ageGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                    <RadioButton
                        android:id="@+id/toddler"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/toddler"
                        android:textColor="@color/purple_light"
                        android:layout_margin="8dp"
                        android:layout_columnWeight="1"/>

                    <RadioButton
                        android:id="@+id/child"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/child"
                        android:textColor="@color/purple_light"
                        android:layout_margin="8dp"
                        android:layout_columnWeight="1"/>

                    <RadioButton
                        android:id="@+id/teenager"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/teenager"
                        android:textColor="@color/purple_light"
                        android:layout_margin="8dp"
                        android:layout_columnWeight="1"/>

                    <RadioButton
                        android:id="@+id/youngAdult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/young_adult"
                        android:textColor="@color/purple_light"
                        android:layout_margin="8dp"
                        android:layout_columnWeight="1"/>

                    <RadioButton
                        android:id="@+id/adult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/adult"
                        android:textColor="@color/purple_light"
                        android:layout_margin="8dp"
                        android:layout_columnWeight="1"/>

                    <RadioButton
                        android:id="@+id/middleAgeAdult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/middle_aged_adult"
                        android:textColor="@color/purple_light"
                        android:layout_margin="8dp"
                        android:layout_columnWeight="1"/>

                    <RadioButton
                        android:id="@+id/elderly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/elderly"
                        android:textColor="@color/purple_light"
                        android:layout_margin="8dp"
                        android:layout_columnWeight="1"/>
            </RadioGroup>



        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/isInvited"
            android:textSize="15sp"
            android:textColor="@color/purple_light"
            android:layout_margin="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/inviteGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:id="@+id/guestInvite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/yes"
                    android:textColor="@color/purple_light"/>
                <RadioButton
                    android:id="@+id/guestDontInvite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textColor="@color/purple_light"
                    android:layout_marginStart="20dp"/>
            </RadioGroup>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hasAccepted"
            android:textSize="15sp"
            android:textColor="@color/purple_light"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/acceptedInviteGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:id="@+id/acceptInvite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/yes"
                    android:textColor="@color/purple_light"/>
                <RadioButton
                    android:id="@+id/unacceptInvite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textColor="@color/purple_light"
                    android:layout_marginStart="20dp"/>
            </RadioGroup>

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/specialGuest"
            android:textColorHint="@color/purple_light"
            app:hintTextColor="@color/purple_light"
            app:boxStrokeColor="@color/purple_light"
            app:boxStrokeWidth="2dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/specialRequestGuest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_light"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/idsubPlanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createGuestForEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/add_guest"
            android:layout_margin="10dp" />


    </LinearLayout>
    </ScrollView>

</FrameLayout>